--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,6 +473,7 @@ a:hover {
     white-space:nowrap;
     overflow:hidden;    
     animation: type 7s steps(50, end);
+	animation-delay: 5s;
 }
 
 @keyframes type {
